@@ -38,6 +38,8 @@ Enhancements from 1.3.2
 - SuffixFileFilter [IO-126]
   - Add faciltiy to specify case sensitivty on suffix matching
 
+- RegexFilter [IO-74]
+  - Add new regular expression file filter implementation
 
 Feedback
 --------
